--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <a href="contact.html">contact</a>
     </nav>
     <h1>Welcome to my Pet Store</h1>
-
+    <h1>Welcome to my Pet Store</h1>
+    <h1>Welcome to my Pet Store</h1>
     <hr>
 
 </body>
