--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <h1>Welcome to my Pet Store</h1>
     <h1>Welcome to my Pet Store</h1>
     <h1>Welcome to my Pet Store</h1>
+    <h1>Welcome to my Pet Store</h1>
+    <h1>Welcome to my Pet Store</h1>
+    <h1>Welcome to my Pet Store</h1>
+    <h1>Welcome to my Pet Store</h1>
     <hr>
 
 </body>
