--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
         <a href="index.html">home</a> | 
         <a href="about.html">about</a> | 
         <a href="contact.html">contact</a>
+        <a href="contact.html">contact</a>
+        <a href="contact.html">contact</a>
+        <a href="contact.html">contact</a>
     </nav>
 
     <hr>
