--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         <a href="index.html">home</a> | 
         <a href="about.html">about</a> | 
         <a href="contact.html">contact</a>
-        <a href="contact.html">contact</a>
+        <a href="contact.html">danisss</a>
     </nav>
 
     <h1>contact us</h1>
