--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,9 @@
         <a href="about.html">about</a> | 
         <a href="contact.html">contact</a>
         <a href="contact.html">danisss</a>
+        <a href="contact.html">danisss</a>
+        <a href="contact.html">danisss</a>
+        <a href="contact.html">danisss</a>
     </nav>
 
     <h1>contact us</h1>
