--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="index.html">home</a> | 
         <a href="about.html">about</a> | 
         <a href="contact.html">contact</a>
+        <a href="contact.html">contact</a>
     </nav>
     <h1>Welcome to my Pet Store</h1>
     <h1>Welcome to my Pet Store</h1>
